--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,9 @@ android {
         exclude 'META-INF/LGPL2.1'
         exclude("META-INF/*.kotlin_module")
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -53,6 +56,7 @@ dependencies {
     // Kotlin standard library
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation "androidx.core:core-ktx:1.3.2"
 
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_android_version"
